<resources>
    <string name="app_name">eats</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo electronico</string>
    <string name="name">Nombre(s)</string>
    <string name="surname">Apellidos</string>
    <string name="date">Fecha de nacimiento</string>
    <string name="entrar_con">Entrar con:</string>
    <string name="al_chile_si_le_entro">¡Al chile si le entró!</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bussinesName">Nombre del negocio</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_user_menu2">userMenu2</string>
    <string name="al_chile_siguiente">Siguiente</string>
    <string name="phoneNumber">Telefono</string>
    <string name="rbtn_commerce">Comercio</string>
    <string name="adress">Dirección</string>
    <string name="rbtn_client">Cliente</string>
    <string name="rbtn_deliver">Repartidor</string>
    <string name="kindUser">Tipo de usuario</string>
    <string name="kindVehicule">Medio de transporte</string>

    <string name="curp">Curp</string>
    <string-array name="food_types">
        <item>Tipo de comida</item>
        <item>Comida</item>
        <item>Comida rapida</item>
        <item>Bebidas</item>
        <item>Bocadillos</item>
        <item>Cena</item>
        <item>Desayuno</item>
        <item>Ensaladas</item>
        <item>Postres</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
