<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="universal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment_universal">

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:shadowColor="#EA0000"
        android:textColor="#000000"
        android:textColorHighlight="#67BFAE"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="180dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="#11000000"
        android:drawableStart="@drawable/ic_surname"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:shadowColor="#EA0000"
        android:textColor="#000000"
        android:textColorHighlight="#67BFAE"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/name"
        android:layout_width="180dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="#11000000"
        android:drawableStart="@drawable/ic_name"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:shadowColor="#EA0000"
        android:textColor="#000000"
        android:textColorHighlight="#67BFAE"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="0dp"
        android:layout_height="41dp"

        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="#11000000"
        android:drawableStart="@drawable/ic_phone"
        android:ems="10"
        android:hint="@string/phoneNumber"
        android:inputType="phone"
        android:shadowColor="#EA0000"
        android:textColor="#000000"
        android:textColorHighlight="#67BFAE"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />




    <EditText
        android:id="@+id/etPlannedDate"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:focusable="false"
        android:clickable="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="#11000000"
        android:drawableStart="@drawable/ic_date"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:shadowColor="#EA0000"
        android:textColor="#000000"
        android:textColorHighlight="#67BFAE"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:shadowColor="#EA0000"
        android:textColor="#000000"
        android:textColorHighlight="#67BFAE"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="372dp"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/radio"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtn_commerce"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:text="@string/rbtn_commerce"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rbtn_client"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:text="@string/rbtn_client"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rbtn_deliver"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/rbtn_deliver"
                android:textSize="18sp" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/kindUser"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPlannedDate" />

</androidx.constraintlayout.widget.ConstraintLayout>