<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment_deliver">


    <EditText
        android:id="@+id/curp"
        android:layout_width="218dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="52dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="#11000000"
        android:drawableStart="@drawable/ic_curp"
        android:ems="10"
        android:hint="@string/curp"
        android:inputType="text"
        android:shadowColor="#EA0000"
        android:textColor="#000000"
        android:textColorHighlight="#67BFAE"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="218dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="#11000000"
        android:drawableStart="@drawable/ic_runrun"
        android:ems="10"
        android:hint="@string/kindVehicule"
        android:inputType="text"
        android:shadowColor="#EA0000"
        android:textColor="#000000"
        android:textColorHighlight="#67BFAE"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curp" />

    <EditText
        android:id="@+id/adress"
        android:layout_width="0dp"
        android:layout_height="41dp"

        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="#11000000"
        android:drawableStart="@drawable/ic_adress"
        android:ems="10"
        android:hint="@string/adress"
        android:inputType="textPersonName"
        android:shadowColor="#EA0000"
        android:textColor="#000000"
        android:textColorHighlight="#67BFAE"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="139dp"
        android:layout_height="143dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_profllepicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_profllepicture" />

</androidx.constraintlayout.widget.ConstraintLayout>